Added resume for the website

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-md-4 col-sm-4 col-xs-4">
                   <div class="card border-0 shadow mb-4 d-none d-lg-block">
                     <div class="card-body">
-                    <a target="_blank" class="btn btn-block btn-primary mb-3 py-3" href="https://github.com/BlackrockDigital/startbootstrap-resume/archive/gh-pages.zip">
+                    <a target="_blank" class="btn btn-block btn-primary mb-3 py-3" href="/resume/Yurii Ulianets - Resume.doc">
                       <i class="fas fa-download fa-fw"></i> <span>Resume</span>
                     </a>
                     <hr>
