Fixed mobile version

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <p>Technologies: Asp .Net, MS SQL, MySql, ADO.Net, WinForms, DevExpess, WCF, NHibernate, .Net Core, TPL, CEF (Chromium embedded framework), EF Core, Docker, Terraform, AWS, Android, Redis, RabbitMQ, SendGrid, XML, AJAX, JQuery, Angular, React</p>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-4">
-                  <div class="card border-0 shadow mb-4 d-none d-lg-block">
+                  <div class="card border-0 shadow">
                     <div class="card-body">
                     <a target="_blank" class="btn btn-block btn-primary mb-3 py-3" href="resume/Yurii Ulianets - Resume.doc">
                       <i class="fas fa-download fa-fw"></i> <span>Resume</span>
@@ -78,13 +78,13 @@
                     <a target="_blank" href="https://github.com/YuriU" class="btn btn-block btn-outline-github"><i class="fab fa-github fa-fw"></i> View on GitHub</a>
                     </div>
                   </div>
-                  <div class="card border-0 shadow mb-4 d-none d-lg-block">
+                  <div class="card border-0 shadow mb-4">
                       <div class="card-body">
                           <a target="_blank" href="https://github.com/YuriU/personalWebsite" class="btn btn-block btn-outline-github"><i class="fab fa-github fa-fw"></i>WebSite source</a>
                           <a target="_blank" href="https://github.com/YuriU/personalWebsiteInfra" class="btn btn-block btn-outline-github"><i class="fab fa-github fa-fw"></i>WebSite infra</a>
                       </div>
                   </div>
-                  <div class="card border-0 shadow mb-4 d-none d-lg-block">
+                  <div class="card border-0 shadow mb-4">
                       
                       <div class="card-body">
                         <div class="small mb-2 font-weight-bold text-center">Proffesional certifications</div>
