--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <div class="col-md-4 col-sm-4 col-xs-4">
                   <div class="card border-0 shadow">
                     <div class="card-body">
-                    <a target="_blank" class="btn btn-block btn-primary mb-3 py-3" href="resume/Yurii Ulianets - Resume.doc">
+                    <button target="_blank" class="btn btn-block btn-primary mb-3 py-3" onclick="downloadResume()">
                       <i class="fas fa-download fa-fw"></i> <span>Resume</span>
-                    </a>
+                    </button>
                     <hr>
                     <a target="_blank" href="https://www.linkedin.com/in/yurii-ulianets/" class="btn btn-block btn-outline-primary mb-3"><i class="fab fa-linkedin fa-fw"></i> LindedIn Profile</a>
                     <a target="_blank" href="https://www.hackerrank.com/jerryhire8" class="btn btn-block btn-outline-hackerrank"><i class="fab fa-hackerrank"></i> Hakerrank</a>
@@ -102,6 +102,7 @@
                 </div>
         </footer>
 
+        <script src="scripts/downloader.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
