--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                       <div class="card-body">
                         <div class="small mb-2 font-weight-bold text-center">Proffesional certifications</div>
                         <a target="_blank" href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&t=c&d=2019-05-29&ci=AWS00895400"><img src="img\AWS-SA.png" width="100" height="100"></a>
+                        <a target="_blank" href="https://www.certmetrics.com/amazon/public/badge.aspx?i=2&t=c&d=2019-10-16&ci=AWS00895400"><img src="img\AWS-DA.png" width="100" height="100"></a>
                       </div>
                   </div>
             </div>
