--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-md-4 col-sm-4 col-xs-4">
                   <div class="card border-0 shadow">
                     <div class="card-body">
-                    <button target="_blank" class="btn btn-block btn-primary mb-3 py-3" onclick="downloadResume()">
+                    <button id="btn-download-resume" target="_blank" class="btn btn-block btn-primary mb-3 py-3">
                       <i class="fas fa-download fa-fw"></i> <span>Resume</span>
                     </button>
                     <hr>
@@ -96,7 +96,6 @@
           </div>
         </div>
           
-        
         <footer class="footer">
                 <div class="container">
                   <span class="text-muted">Yurii Ulianets 2019. Powered by <a href="https://getbootstrap.com">Bootstrap</a></span>
@@ -107,5 +106,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="scripts/config.js"></script>
+        <script src="scripts/index-controller.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
