Added 2 state button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
                   <div class="card border-0 shadow">
                     <div class="card-body">
                     <button id="btn-download-resume" target="_blank" class="btn btn-block btn-primary mb-3 py-3">
-                      <i class="fas fa-download fa-fw"></i> <span>Resume</span>
+                      <div class="bnt-enabled-state">
+                          <i class="fas fa-download fa-fw"></i> <span>Resume</span>
+                      </div>
+                      <div class="bnt-disabled-state">
+                          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                          <span class="sr-only">Loading...</span>
+                      </div>
                     </button>
                     <hr>
                     <a target="_blank" href="https://www.linkedin.com/in/yurii-ulianets/" class="btn btn-block btn-outline-primary mb-3"><i class="fab fa-linkedin fa-fw"></i> LindedIn Profile</a>
@@ -102,11 +108,11 @@
                 </div>
         </footer>
 
+        <script src="scripts/config.js"></script>
         <script src="scripts/downloader.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="scripts/config.js"></script>
         <script src="scripts/index-controller.js"></script>
         <script src="scripts/main.js"></script>
     </body>
