--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="https://kit.fontawesome.com/99d3b4a807.js"></script>
         <link href="css/sticky-footer-navbar.css" rel="stylesheet">
         <link href="css/buttons.css" rel="stylesheet">
+        <title>Yurii Ulianets: Senior Software Engineer</title>
         <style>
                 .navbar {
                   margin-bottom: 0;
